// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders accepted protection request 1`] = `
<ProtectionRecoveryRequest
  type="accepted"
/>
`;

exports[`renders empty 1`] = `
<FullWidthPane
  mainTitle="My Logion Protection"
  titleIcon={
    Object {
      "icon": Object {
        "hasVariants": true,
        "id": "shield",
      },
    }
  }
>
  <Loader />
</FullWidthPane>
`;

exports[`renders pending protection request 1`] = `
<ProtectionRecoveryRequest
  type="pending"
/>
`;

exports[`renders protected and claimed 1`] = `<RecoveryProcess />`;

exports[`renders protected but not claimed 1`] = `
<ProtectionRecoveryRequest
  type="activated"
/>
`;
